Mobile-friendly, update document.title on change list

--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
 <html lang="en">
 <head>
 <meta charset="UTF-8">
-<title>Shopping Lists</title>
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<title>Shopping Lists 2</title>
 <style>
   body { font-family: sans-serif; padding: 1em; }
   #top-menu { margin-bottom: 1em; }
@@ -12,7 +13,14 @@
   .section-header .title { flex: 1; text-align: left; min-width: 0; }
   .line { padding: 0.2em 0; display: flex; align-items: center; }
   .line-text { margin-left: 0.5em; flex: 1; cursor: text; }
+  .section-header, .line { flex-wrap: wrap; }
   .menu { margin-left: 0.5em; }
+  @media (max-width: 600px) {
+    body { padding: 0.5em; }
+    .section { padding: 0.3em; }
+    .line { padding: 0.1em 0; }
+    .menu { margin-left: 0; }
+  }
 </style>
 </head>
 <body>
