Towards more dynamic menus

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<title>Shopping Lists 2</title>
+<title>Shopping Lists</title>
 <style>
   body { font-family: sans-serif; padding: 1em; }
   #top-menu { margin-bottom: 1em; }
